updated user api
